BMenu: std::stable_sort uses a comparator function returning bool

thanks Madmax for the pointer.
fixes #18775

Change-Id: I1934c90a2976ce12c4aa8adb0205c48c239627d8
Reviewed-on: https://review.haiku-os.org/c/haiku/+/7401
Reviewed-by: Adrien Destugues <pulkomandy@pulkomandy.tk>